# Am-i-in-a-sandbox-

./: Cargo.toml
src/: main.rs  mod.rs  reporter.rs  scorer.rs  scoring.rs
src/detection/: files.rs  mac.rs  memory.rs  mod.rs  processes.rs  processor.rs  ram.rs  shared.rs  uptime.rs
