[package]
name = "conan"
version = "0.1.0"
edition = "2024"

[dependencies]
sysinfo = "0.36.1"
colored = "3.0.0"
mac_address = "1.1.8"
glob = "0.3.2"


[dependencies.windows]
version = "0.61"
features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemInformation"
]